@@ -563,20 +563,16 @@ class CDRule extends CZBXAPI {
 	 * @return boolean
 	 */
 	public function delete(array $druleIds) {
-		$druleIds = zbx_toArray($druleIds);
-
-		if (CWebUser::getType() < USER_TYPE_ZABBIX_ADMIN) {
-			self::exception(ZBX_API_ERROR_PARAMETERS, _('No permissions to referred object or it does not exist!'));
-		}
+		$this->validateDelete($druleIds);
 
 		$actionIds = array();
 
 		$dbActions = DBselect(
-			'SELECT DISTINCT c.actionid'.
-			' FROM c.conditions'.
-			' WHERE c.conditiontype='.CONDITION_TYPE_DRULE.
-				' AND '.dbConditionString('c.value', $druleIds).
-			' ORDER BY c.actionid'
+			'SELECT DISTINCT actionid'.
+			' FROM conditions'.
+			' WHERE conditiontype='.CONDITION_TYPE_DRULE.
+				' AND '.dbConditionString('value', $druleIds).
+			' ORDER BY actionid'
 		);
 		while ($dbAction = DBfetch($dbActions)) {
 			$actionIds[] = $dbAction['actionid'];
@@ -594,9 +590,31 @@ class CDRule extends CZBXAPI {
 			));
 		}
 
-		DB::delete('drules', array('druleid' => $druleIds));
+		$result = DB::delete('drules', array('druleid' => $druleIds));
+		if ($result) {
+			foreach ($druleIds as $druleId) {
+				add_audit(AUDIT_ACTION_DELETE, AUDIT_RESOURCE_DISCOVERY_RULE, '['.$druleId.']');
+			}
+		}
 
 		return array('druleids' => $druleIds);
+	}
+
+	/**
+	 * Validates the input parameters for the delete() method.
+	 *
+	 * @throws APIException if the input is invalid
+	 *
+	 * @param array $druleIds
+	 *
+	 * @return void
+	 */
+	protected function validateDelete(array $druleIds) {
+		if (!$druleIds) {
+			self::exception(ZBX_API_ERROR_PARAMETERS, _('Empty input parameter.'));
+		}
+
+		$this->checkDrulePermissions($druleIds);
 	}
 
 	/**
@@ -752,5 +770,20 @@ class CDRule extends CZBXAPI {
 		}
 
 		return $result;
+	}
+
+	/**
+	 * Checks if the current user has access to given discovery rules.
+	 *
+	 * @throws APIException if the user doesn't have write permissions for discovery rules.
+	 *
+	 * @param array $druleIds
+	 *
+	 * @return void
+	 */
+	protected function checkDrulePermissions(array $druleIds) {
+		if (!$this->isWritable($druleIds)) {
+			self::exception(ZBX_API_ERROR_PERMISSIONS, _('No permissions to referred object or it does not exist!'));
+		}
 	}
 }
